final commit, testing checked and fixed.

--- a/src/app/proceedings-list/proceedings-list.component.scss
+++ b/src/app/proceedings-list/proceedings-list.component.scss
@@ -1,6 +1,4 @@
-// You can define component-specific styles here
-.table {
-    width: 100%;
-    // Add more styles as needed
-  }
-  
+.proceedings-table-container {
+  max-height: 500px;
+  overflow-y: auto;
+}
