--- a/src/app/proceedings-form/proceedings-form.component.html
+++ b/src/app/proceedings-form/proceedings-form.component.html
@@ -1,23 +1,32 @@
-<form [formGroup]="proceedingsForm" (ngSubmit)="onSubmit()">
-  <p class="text-muted"><small>Fields marked with an * are mandatory.</small></p>
-  <div class="form-group">
-    <label for="name">* Name:</label>
-    <input type="text" id="name" formControlName="name" class="form-control" required>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2 class="text-center mb-4">Create a new proceeding</h2>
+      <p class="text-muted text-center"><small>Fields marked with an * are mandatory</small></p>
+      <form [formGroup]="proceedingsForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="name">* Name:</label>
+          <input type="text" id="name" formControlName="name" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="personalId">* Personal ID:</label>
+          <input type="text" id="personalId" formControlName="personalId" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="email">* Email:</label>
+          <input type="email" id="email" formControlName="email" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="reason">* Reason for Proceeding:</label>
+          <textarea id="reason" formControlName="reason" class="form-control" required></textarea>
+        </div>
+        <div *ngIf="emailSentMessage" class="alert alert-info">
+          {{ emailSentMessage }}
+        </div>
+        <div class="text-center">
+          <button type="submit" [disabled]="!proceedingsForm.valid" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="personalId">* Personal ID:</label>
-    <input type="text" id="personalId" formControlName="personalId" class="form-control" required>
-  </div>
-  <div class="form-group">
-    <label for="email">* Email:</label>
-    <input type="email" id="email" formControlName="email" class="form-control" required>
-  </div>
-  <div class="form-group">
-    <label for="reason">* Reason for Proceeding:</label>
-    <textarea id="reason" formControlName="reason" class="form-control" required></textarea>
-  </div>
-  <div *ngIf="emailSentMessage" class="alert alert-info">
-    {{ emailSentMessage }}
-  </div>
-  <button type="submit" [disabled]="!proceedingsForm.valid" class="btn btn-primary">Submit</button>
-</form>
+</div>
