--- a/src/app/proceedings-form/proceedings-form.component.scss
+++ b/src/app/proceedings-form/proceedings-form.component.scss
@@ -1,4 +1,8 @@
 .form-group {
-    margin-bottom: 1rem;
-  }
-  
+  margin-bottom: 1rem;
+}
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
