--- a/src/app/proceedings-list/proceedings-list.component.html
+++ b/src/app/proceedings-list/proceedings-list.component.html
@@ -1,20 +1,31 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Personal ID</th>
-      <th>Email</th>
-      <th>Email Sent</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let proceeding of proceedingsList">
-      <td>{{ proceeding.id }}</td>
-      <td>{{ proceeding.name }}</td>
-      <td>{{ proceeding.personalId }}</td>
-      <td>{{ proceeding.email }}</td>
-      <td>{{ proceeding.emailSent ? 'Yes' : 'No' }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="mb-3">
+  <input
+    type="text"
+    class="form-control"
+    placeholder="Search by name"
+    [(ngModel)]="searchTerm"
+    (input)="onSearch()"
+  />
+</div>
+<div class="proceedings-table-container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Personal ID</th>
+        <th>Email</th>
+        <th>Email Sent</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let proceeding of filteredProceedingsList">
+        <td>{{ proceeding.id }}</td>
+        <td>{{ proceeding.name }}</td>
+        <td>{{ proceeding.personalId }}</td>
+        <td>{{ proceeding.email }}</td>
+        <td>{{ proceeding.emailSent ? 'Yes' : 'No' }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
