--- a/src/app/proceedings-list/proceedings-list.component.html
+++ b/src/app/proceedings-list/proceedings-list.component.html
@@ -1,12 +1,7 @@
 <div class="mb-3">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="Search by name"
-    [(ngModel)]="searchTerm"
-    (input)="onSearch()"
-  />
+  <input type="text" class="form-control" placeholder="Search by name" [(ngModel)]="searchTerm" (input)="onSearch()" />
 </div>
+<div *ngIf="deletionMessage" class="alert alert-info">{{ deletionMessage }}</div>
 <div class="proceedings-table-container">
   <table class="table">
     <thead>
@@ -15,17 +10,34 @@
         <th>Name</th>
         <th>Personal ID</th>
         <th>Email</th>
+        <th>Reason</th>
         <th>Email Sent</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let proceeding of filteredProceedingsList">
-        <td>{{ proceeding.id }}</td>
-        <td>{{ proceeding.name }}</td>
-        <td>{{ proceeding.personalId }}</td>
-        <td>{{ proceeding.email }}</td>
-        <td>{{ proceeding.emailSent ? 'Yes' : 'No' }}</td>
-      </tr>
+      <ng-container *ngFor="let proceeding of filteredProceedingsList">
+        <tr>
+          <td>{{ proceeding.id }}</td>
+          <td>{{ proceeding.name }}</td>
+          <td>{{ proceeding.personalId }}</td>
+          <td>{{ proceeding.email }}</td>
+          <td>
+            <button class="btn btn-info btn-sm" (click)="toggleReason(proceeding)">
+              {{ proceeding.showReason ? 'Hide Reason' : 'Show Reason' }}
+            </button>
+          </td>
+          <td>{{ proceeding.emailSent ? 'Yes' : 'No' }}</td>
+          <td>
+            <button class="btn btn-danger btn-sm" (click)="confirmDelete(proceeding)">Delete</button>
+          </td>
+        </tr>
+        <tr *ngIf="proceeding.showReason">
+          <td colspan="7">
+            <strong>Reason:</strong> {{ proceeding.reason }}
+          </td>
+        </tr>
+      </ng-container>
     </tbody>
   </table>
 </div>
